cli/src/tui/browse/snapshots/snapshot_browse_btrfs_subvolumes_full.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││  Filesystem  ││  List        ││ID gen parent top level path uuid │
│  NUT     ││  Devices     ││> Full        ││256 10 5 5 data abc-123           │
│          ││> Subvolumes  ││  Snapshots   ││                                  │
│          ││  Scrub       ││  Deleted     ││                                  │
│          ││  Balance     ││  Default     ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs subvolume list -a -p -c -u -q -R -t '--sort=path' ''
