cli/src/tui/browse/snapshots/snapshot_browse_focus_subview_col.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 988
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││> Filesystem  ││> Usage       ││Overall:                          │
│  NUT     ││  Devices     ││  Show        ││    Device size: 10.91TiB         │
│  Systemd ││  Subvolumes  ││  Df          ││    Used: 4.20TiB                 │
│  SMART   ││  Scrub       ││  Commit Stats││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs filesystem usage ''
