cli/src/tui/browse/snapshots/snapshot_browse_lsblk_filesystems.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 961
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││  Tree        ││NAME FSTYPE FSVER LABEL UUID FSAVAIL FSUSE% MOUNTP│
│  NUT     ││> Filesystems ││vdb crypto_LUKS 2 braid-disk1 abc                 │
│  Systemd ││  Disks       ││`-braid-disk1 btrfs abc 100M 1% /mnt/storage      │
│  SMART   ││  All Columns ││                                                  │
│> lsblk   ││  SCSI        ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ lsblk -f
