cli/src/tui/browse/snapshots/snapshot_browse_nut_clients.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 762
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││  Status      ││127.0.0.1                                         │
│> NUT     ││  Variables   ││                                                  │
│  Systemd ││  Commands    ││                                                  │
│  SMART   ││> Clients     ││                                                  │
│  lsblk   ││  RW Vars     ││                                                  │
│          ││  UPSes       ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ upsc -c ups
