cli/src/tui/browse/snapshots/snapshot_browse_nut_commands.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││  Status      ││Instant commands supported on UPS [ups]:          │
│> NUT     ││  Variables   ││beeper.disable                                    │
│          ││> Commands    ││                                                  │
│          ││  Clients     ││                                                  │
│          ││  RW Vars     ││                                                  │
│          ││  UPSes       ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ upscmd -l ups
