cli/src/tui/browse/snapshots/snapshot_browse_nut_rw_vars.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││  Status      ││[input.transfer.high]                             │
│> NUT     ││  Variables   ││High transfer voltage                             │
│          ││  Commands    ││                                                  │
│          ││  Clients     ││                                                  │
│          ││> RW Vars     ││                                                  │
│          ││  UPSes       ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ upsrw -l ups
