cli/src/tui/browse/snapshots/snapshot_browse_nut_status.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││> Status      ││Status   OL                                       │
│> NUT     ││  Variables   ││Battery  100%                                     │
│          ││  Commands    ││Runtime  30:00                                    │
│          ││  Clients     ││Load     20% (100 W est.)                         │
│          ││  RW Vars     ││                                                  │
│          ││  UPSes       ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ upsc ups
