cli/src/tui/browse/snapshots/snapshot_browse_nut_status_multi_flag.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 732
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││> Status      ││Status   OB LB                                    │
│> NUT     ││  Variables   ││Battery  100%                                     │
│  Systemd ││  Commands    ││Runtime  30m 0s                                   │
│  SMART   ││  Clients     ││Load     20% (100 W est.)                         │
│  lsblk   ││  RW Vars     ││                                                  │
│          ││  UPSes       ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ upsc ups
